# traders

./: Cargo.toml  README.md
assets/texture/: ships.ron
config/: display.ron
src/: components.rs  entities.rs  game.rs  main.rs  resources.rs  systems.rs
src/components/: base.rs  cargo.rs  mod.rs  ui.rs
src/systems/: behaviour.rs  cargo.rs  mod.rs
