[package]
name = "traders"
version = "0.1.0"
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
edition = "2018"

[dependencies]
nalgebra-glm = "0.5"
derive_more = "0.99.9"
itertools = "0.9.0"
rand = "0.7.3"
log = "0.4.11"

amethyst = { version = "0.15", features = ["vulkan", "no-slow-safety-checks"], default-features = false }